--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     </head>
 <body>
 <header>
-<img src="assets/imagens/logo.svg" width="64" height="28">
-
-<button>
+<img src="assets/imagens/logo.svg"/>
+<button class="hamburguer-menu">
     <img src="assets/imagens/hamburguerMenu.svg"/>
 </button>
+<nav class="navbar">
+    <a href="">Home</a>
+    <a href="">Pokedex</a>
+    <a href="">Legendaries</a>
+    <a href="">Documentation</a>
+
+
+</nav>
 
 </header>
 
