--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 </nav>
 
 </header>
-
+<main>
+<img src="assets/imagens/picachus.svg" alt="Picachu" class="picachu"/>
+<h1><strong>Find</strong> all your 
+    favorite <strong>Pokemon</strong></h1>
+<p>You can know the type of Pokemon, its strengths, disadvantages and abilities</p>
+</main>
 
 </body>
 </html>
